# RustOS

./: Cargo.toml  README.md  install_rust.sh  linker.ld
.cargo/: config.toml
src/: main.rs
