[package]
name = "rustos"
version = "0.1.0"
edition = "2021"
authors = ["lucasb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Disabling Unwinding
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9"
